--- a/coop-reflections/tulip-retail.html
+++ b/coop-reflections/tulip-retail.html
@@ -32,8 +32,8 @@
 
       <!-- Menu Items -->
       <ul class="list-unstyled components">
-        <li> <a href="http://jonathanhovich.com/"><i class="fa fa-home" style="margin-right:15px"></i>Home</a></li>
-        <li> <a href="http://jonathanhovich.com/resume"><i class="fa fa-file" style="margin-right:15px"></i>Resume</a></li>
+        <li> <a href="https://jonny-h.github.io/"><i class="fa fa-home" style="margin-right:15px"></i>Home</a></li>
+        <li> <a href="https://jonny-h.github.io/resume"><i class="fa fa-file" style="margin-right:15px"></i>Resume</a></li>
         <!-- Co-op Reflections Menu Items-->
         <li class="active">
           <a href="#coopSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
@@ -46,7 +46,7 @@
             </li>
           </ul>
         </li>
-        <li> <a href="http://jonathanhovich.com/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
+        <li> <a href="https://jonny-h.github.io/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
       </ul>
     </nav>
   
