--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
 
       <!-- Menu Items -->
       <ul class="list-unstyled components">
-        <li> <a href="http://jonathanhovich.com/"><i class="fa fa-home" style="margin-right:15px"></i>Home</a></li>
+        <li> <a href="https://jonny-h.github.io/"><i class="fa fa-home" style="margin-right:15px"></i>Home</a></li>
         <li class="active"><a><i class="fa fa-file" style="margin-right:15px"></i>Resume</a></li>
         <!-- Co-op Reflections Menu Items-->
         <li>
@@ -41,11 +41,11 @@
           </a>
             <ul class="collapse list-unstyled" id="coopSubmenu">
               <li>
-                  <a href="http://jonathanhovich.com/coop-reflections/tulip-retail">Tulip Retail</a> 
+                  <a href="https://jonny-h.github.io/coop-reflections/tulip-retail">Tulip Retail</a> 
               </li>
             </ul>
         </li>
-        <li> <a href="http://jonathanhovich.com/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
+        <li> <a href="https://jonny-h.github.io/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
       </ul>
     </nav>
 
