--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
 
       <!-- Menu Items -->
       <ul class="list-unstyled components">
-        <li> <a href="http://jonathanhovich.com/"><i class="fa fa-home" style="margin-right:15px"></i>Home</a></li>
-        <li> <a href="http://jonathanhovich.com/resume"><i class="fa fa-file" style="margin-right:15px"></i>Resume</a></li>
+        <li> <a href="https://jonny-h.github.io/"><i class="fa fa-home" style="margin-right:15px"></i>Home</a></li>
+        <li> <a href="https://jonny-h.github.io/resume"><i class="fa fa-file" style="margin-right:15px"></i>Resume</a></li>
         <!-- Co-op Reflections Menu Items-->
         <li>
           <a href="#coopSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
@@ -41,7 +41,7 @@
           </a>
           <ul class="collapse list-unstyled" id="coopSubmenu">
             <li>
-                <a href="http://jonathanhovich.com/coop-reflections/tulip-retail">Tulip Retail</a> 
+                <a href="https://jonny-h.github.io/coop-reflections/tulip-retail">Tulip Retail</a> 
             </li>
           </ul>
         </li>
