--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Menu Items -->
       <ul class="list-unstyled components">
         <li class="active"><a><i class="fa fa-home" style="margin-right:15px"></i>Home</a></li>
-        <li><a href="http://jonathanhovich.com/resume"><i class="fa fa-file" style="margin-right:15px"></i>Resume</a></li>
+        <li><a href="https://jonny-h.github.io/resume"><i class="fa fa-file" style="margin-right:15px"></i>Resume</a></li>
         <!-- Co-op Reflections Menu Items-->
         <li>
           <a href="#coopSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
@@ -41,11 +41,11 @@
           </a>
             <ul class="collapse list-unstyled" id="coopSubmenu">
               <li>
-                  <a href="http://jonathanhovich.com/coop-reflections/tulip-retail">Tulip Retail</a> 
+                  <a href="https://jonny-h.github.io/coop-reflections/tulip-retail">Tulip Retail</a> 
               </li>
             </ul>
         </li>
-        <li> <a href="http://jonathanhovich.com/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
+        <li> <a href="https://jonny-h.github.io/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
       </ul>
     </nav>
 
@@ -112,7 +112,7 @@
                   <i class="bullet fa fa-briefcase" aria-hidden="true"></i>
                 </td>
                 <td>
-                  I have worked on multiple programming projects - small and large - both individually or as part of a group. Recently, I landed head-first into <a id="link" href="http://jonathanhovich.com/coop-reflections/tulip-retail">mobile automation testing</a>. I enjoy working in a team, you'll learn faster and much more. As the saying goes: <i>“It takes two flints to make a fire”</i>.
+                  I have worked on multiple programming projects - small and large - both individually or as part of a group. Recently, I landed head-first into <a id="link" href="https://jonny-h.github.io/coop-reflections/tulip-retail">mobile automation testing</a>. I enjoy working in a team, you'll learn faster and much more. As the saying goes: <i>“It takes two flints to make a fire”</i>.
                 </td>
               </tr>
               
