--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
           </a>
             <ul class="collapse list-unstyled" id="coopSubmenu">
               <li>
-                  <a href="https://jonny-h.github.io/coop-reflections/tulip-retail">Tulip Retail</a> 
+                <a href="https://jonny-h.github.io/coop-reflections/tulip-retail">Tulip Retail</a> 
+              </li>
+              <li>
+                <a href="https://jonny-h.github.io/coop-reflections/ontario-ministry-of-health">Ontario Ministry of Health</a> 
               </li>
             </ul>
         </li>
