--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,9 @@
             <li>
                 <a href="https://jonny-h.github.io/coop-reflections/tulip-retail">Tulip Retail</a> 
             </li>
+            <li>
+              <a href="https://jonny-h.github.io/coop-reflections/ontario-ministry-of-health">Ontario Ministry of Health</a> 
+            </li>
           </ul>
         </li>
         <li class="active"><a><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
