--- a/coop-reflections/tulip-retail.html
+++ b/coop-reflections/tulip-retail.html
@@ -44,6 +44,9 @@
             <li class="active">
               <a>Tulip Retail</a> 
             </li>
+            <li>
+              <a href="https://jonny-h.github.io/coop-reflections/ontario-ministry-of-health">Ontario Ministry of Health</a> 
+            </li>
           </ul>
         </li>
         <li> <a href="https://jonny-h.github.io/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
