ncr co-op reflection

--- a/coop-reflections/tulip-retail.html
+++ b/coop-reflections/tulip-retail.html
@@ -46,6 +46,11 @@
             <li>
               <a href="https://jonny-h.github.io/coop-reflections/ontario-ministry-of-health">Ontario Ministry of Health</a> 
             </li>
+            <li>
+              <a href="https://jonny-h.github.io/coop-reflections/ncr.html"
+                >NCR</a
+              >
+            </li>
           </ul>
         </li>
         <li> <a href="https://jonny-h.github.io/contact"><i class="fa fa-envelope" style="margin-right:15px"></i>Contact</a></li>
