--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                 >
               </li>
               <li>
-                <a href="https://jonny-h.github.io/coop-reflections/ncr.html"
+                <a href="https://jonny-h.github.io/coop-reflections/ncr"
                   >NCR</a
                 >
               </li>
