--- a/coop-reflections/tulip-retail.html
+++ b/coop-reflections/tulip-retail.html
@@ -47,7 +47,7 @@
               <a href="https://jonny-h.github.io/coop-reflections/ontario-ministry-of-health">Ontario Ministry of Health</a> 
             </li>
             <li>
-              <a href="https://jonny-h.github.io/coop-reflections/ncr.html"
+              <a href="https://jonny-h.github.io/coop-reflections/ncr"
                 >NCR</a
               >
             </li>
