active class fix

--- a/coop-reflections/ncr.html
+++ b/coop-reflections/ncr.html
@@ -59,10 +59,8 @@
                   >Ontario Ministry of Health</a
                 >
               </li>
-              <li>
-                <a href="https://jonny-h.github.io/coop-reflections/ncr"
-                  >NCR</a
-                >
+              <li class="active">
+                <a>NCR</a>
               </li>
             </ul>
           </li>
