active class fix

--- a/coop-reflections/ncr.html
+++ b/coop-reflections/ncr.html
@@ -50,8 +50,11 @@
               Co-op Reflections
             </a>
             <ul class="collapse list-unstyled" id="coopSubmenu">
-              <li class="active">
-                <a>Tulip Retail</a>
+              <li>
+                <a
+                  href="https://jonny-h.github.io/coop-reflections/tulip-retail"
+                  >Tulip Retail</a
+                >
               </li>
               <li>
                 <a
